More notebook stuff

--- a/notebooks/Clustering.ipynb
+++ b/notebooks/Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "plt.style.use('ggplot')\n",
     "import torch\n",
     "from torch.utils.data import random_split, DataLoader, TensorDataset\n",
+    "from torch.distributions import multivariate_normal, binomial\n",
     "from sklearn import datasets\n",
     "import numpy as np\n",
     "from torch.autograd import Variable\n",
@@ -387,6 +388,35 @@
     "plt.plot(lh)\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'torch.distributions.mixture_same_family'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-c44807613ce8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Make GMM data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistributions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistributions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmixture_same_family\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMixtureSameFamily\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mM\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'torch.distributions.mixture_same_family'"
+     ]
+    }
+   ],
+   "source": [
+    "# Make GMM data\n",
+    "import torch.distributions as D\n",
+    "from torch.distributions.mixture_same_family import MixtureSameFamily\n",
+    "M = 5\n",
+    "n = 2\n",
+    "mix = D.Categorical(torch.ones(M,))\n",
+    "comp = D.Independent(D.Normal(\n",
+    "             torch.randn(M,n), torch.rand(M,n)), 1)\n",
+    "gmm = mixture_same_family.MixtureSameFamily(mix, comp)"
    ]
   },
   {
