Changed gmm notebook

--- a/notebooks/Clustering.ipynb
+++ b/notebooks/Clustering.ipynb
@@ -66,23 +66,35 @@
     "    loss = .5*(synch + desynch)[-1*post_burn_in_steps:]\n",
     "    return loss.mean()\n",
     "\n",
-    "# def cohn_loss(phases, masks, eps=1e-5, burn_in_prop=.5):\n",
-    "#     num_groups = masks.shape[1]\n",
-    "#     group_size = masks.sum(2)\n",
-    "#     T = phases.shape[0]\n",
-    "#     post_burn_in_steps = T - int(burn_in_prop * T)\n",
-    "#     masked_phases = phases.unsqueeze(2) * masks.unsqueeze(0)\n",
-    "#     xx = torch.where(masks.bool(), torch.cos(masked_phases), torch.zeros_like(masked_phases))\n",
-    "#     yy = torch.where(masks.bool(), torch.sin(masked_phases), torch.zeros_like(masked_phases))\n",
-    "#     go = torch.sqrt((xx.sum(3))**2 + (yy.sum(3))**2) / group_size\n",
-    "#     synch = 1 - go.mean(2)\n",
+    "def circular_moments_batch(phases, masks, burn_in_prop=.5):\n",
+    "    num_groups = masks.shape[0]\n",
+    "    group_size = masks.sum(1)\n",
+    "    group_size = torch.where(group_size == 0, torch.ones_like(group_size), group_size)\n",
+    "    T = phases.shape[0]\n",
     "    \n",
-    "#     mean_angles = torch.atan2(yy.sum(3), xx.sum(3))\n",
-    "#     phase_diffs = mean_angles.unsqueeze(3) - mean_angles.unsqueeze(2)\n",
-    "#     desynch = ((-1*torch.log(torch.abs(2*torch.sin(.5*(phase_diffs))) + eps)) + np.log(2)).sum((2,3)) / (num_groups)**2\n",
+    "    burn_in_steps = int(burn_in_prop * T)\n",
+    "    masked_phases = phases.unsqueeze(1) * masks\n",
+    "    xx = torch.where(masks.bool(), torch.cos(masked_phases), torch.zeros_like(masked_phases))\n",
+    "    yy = torch.where(masks.bool(), torch.sin(masked_phases), torch.zeros_like(masked_phases))\n",
+    "    go = torch.sqrt((xx.sum(-1))**2 + (yy.sum(-1))**2) / group_size\n",
+    "    synch = 1 - go.sum(-1)/num_groups\n",
     "\n",
-    "#     loss = .5*(synch + desynch)[-1*post_burn_in_steps:,:]\n",
-    "#     return loss.mean()"
+    "    mean_angles = torch.atan2(yy.sum(-1), xx.sum(-1))\n",
+    "    desynch = 0\n",
+    "    for m in np.arange(1, int(np.floor(num_groups/2.))+1):\n",
+    "#         K_m = 1 if m < int(np.floor(num_groups/2.)) + 1 else -1\n",
+    "        desynch += (1.0 / (2* num_groups * m**2)) * (torch.cos(m*mean_angles).sum(-1)**2 + torch.sin(m*mean_angles).sum(-1)**2)\n",
+    "        \n",
+    "    #for m in range(1,num_groups):\n",
+    "    #    desynch += (1.0 / 2*num_groups*m**2) * (torch.cos(m*mean_angles).sum(-1)**2 + torch.sin(m*mean_angles).sum(-1)**2)\n",
+    "    #desynch += (1.0 / 2*num_groups*num_groups**2) * (torch.cos(num_groups*mean_angles).sum(-1)**2 + torch.sin(num_groups*mean_angles).sum(-1)**2)\n",
+    "        \n",
+    "    loss = .5*(synch + desynch)[-lasts:,...]\n",
+    "    \n",
+    "    if split == True:\n",
+    "        return loss[-lasts:,...].mean(), synch[-lasts:,...].mean(), desynch[-lasts:,...].mean()\n",
+    "    else:\n",
+    "        return loss.mean()"
    ]
   },
   {
