--- a/notebooks/GMM_clustering.ipynb
+++ b/notebooks/GMM_clustering.ipynb
@@ -521,6 +521,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class connectivity_cGRU(torch.nn.Module):\n",
+    "    def __init__(self, num_in, num_out, num_hid_units=256,num_hid_layers=1, transform=None, feedback=False):\n",
+    "        super(connectivity_cGRU, self).__init__()\n",
+    "        self.num_out = num_out\n",
+    "        self.num_hid_units = num_hid_units\n",
+    "        self.num_hid_layers = num_hid_layers\n",
+    "        self.transform = transform\n",
+    "        self.feedback = feedback\n",
+    "        \n",
+    "        gru_in = 2*num_in if feedback else num_in\n",
+    "        self.gru = torch.nn.GRU(gru_in, num_hid_units, num_hid_layers,)\n",
+    "        self.fc = torch.nn.Linear(self.num_hid_units, self.num_out)\n",
+    "        self.relu = torch.nn.ReLU()\n",
+    "        \n",
+    "    def forward(self, omega, h, phase, coupling_strength=.3, alpha=1e-1,\n",
+    "                GRU_steps=10, kuramoto_steps=100, return_connectivities=False):\n",
+    "        phase_trajectory = []\n",
+    "        connectivities = []\n",
+    "        if self.feedback:\n",
+    "            for t in range(kuramoto_steps):\n",
+    "                data = torch.cat([omega, phase], dim=-1).unsqueeze(0)\n",
+    "                out, h = self.gru(data,h)\n",
+    "                out = self.fc(self.relu(out.squeeze(0)))\n",
+    "                if self.transform == 'softmax':\n",
+    "                    out = softmax(out,dim=-1)\n",
+    "                elif self.transform == 'sigmoid':\n",
+    "                    out = sigmoid(out)\n",
+    "\n",
+    "                connectivity = make_connectivity(out)\n",
+    "                if return_connectivities:\n",
+    "                    connectivities.append(connectivity)\n",
+    "                phase = kuramoto_step(phase, coupling_strength*connectivity, omega, alpha=alpha)\n",
+    "                phase_trajectory.append(phase)        \n",
+    "\n",
+    "            if return_connectivities:\n",
+    "                return phase_trajectory, connectivities\n",
+    "            else:\n",
+    "                return phase_trajectory\n",
+    "        else:\n",
+    "            data = torch.stack([omega for _ in range(GRU_steps)])\n",
+    "            out, h = self.gru(data, h)\n",
+    "\n",
+    "            out = torch.stack([self.fc(self.relu(out[i, ...])) for i in range(GRU_steps)])\n",
+    "            if self.transform == 'softmax':\n",
+    "                out = softmax(out,dim=-1)\n",
+    "            elif self.transform == 'sigmoid':\n",
+    "                out = sigmoid(out)\n",
+    "            connectivity = make_connectivity(out[-1,...])\n",
+    "            if return_connectivities:\n",
+    "                connectivities.append(connectivity)\n",
+    "                \n",
+    "            for t in range(kuramoto_steps):\n",
+    "                phase = kuramoto_step(phase, coupling_strength*connectivity, omega, alpha=alpha)\n",
+    "                phase_trajectory.append(phase)  \n",
+    "                \n",
+    "            if return_connectivities:\n",
+    "                return phase_trajectory, connectivities\n",
+    "            else:\n",
+    "                return phase_trajectory\n",
+    "    \n",
+    "    def init_hidden(self, batch_size):\n",
+    "        weight = next(self.parameters()).data\n",
+    "        hidden = weight.new(self.num_hid_layers, batch_size, self.num_hid_units).zero_()\n",
+    "        return hidden"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
